Add ao import menu.css

--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,8 @@
 /* Header */
 @import "./Header/header.css";
 
+/* Menu */
+@import "./Menu/menu.css";
+
 /* Container */
 @import "./Container/container.css";
